# rogue-clone

./: .gitignore  CMakeLists.txt  README.md  rogue-clone.mak
doc/: RogueChinese.md
rogue/: hit.c  init.c  init.h  inventory.c  level.c  machdep.c  main.c  message.c  monster.c  move.c  object.c  pack.c  play.c  random.c  ring.c  rogue.h  room.c  save.c  score.c  spec_hit.c  throw.c  trap.c  use.c  zap.c
